Slider was overlapping alignment options. Modified CSS to prevent this.

--- a/mt-static/plugins/MaxImageWidth/app.css
+++ b/mt-static/plugins/MaxImageWidth/app.css
@@ -4,12 +4,18 @@
 #create_thumbnail_cb {
   float: left;
   padding-right: 10px;
+  margin-top: 10px;
 }
 #width-slider {
   float: left;
   width: 200px;
+  margin-top: 10px;
 }
 #w-h {
   width: 120px;
   float: left;
+  margin-top: 10px;
+}
+.dialog #image_alignment-field {
+    top: 0;
 }
